--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "file-saver": "^1.3.3",
     "findit": "^2.0.0",
     "get-port": "^2.1.0",
+    "lodash": "^4.17.4",
     "object-path-immutable": "^0.5.1",
     "open": "0.0.5",
     "random-seed": "^0.3.0",
