--- a/package.json
+++ b/package.json
@@ -88,13 +88,14 @@
     "build": "node scripts/build.js && replace '\"/rasa-nlu-trainer/' '\"/' ./build/index.html",
     "test": "node scripts/test.js --env=jsdom",
     "publish-demo": "npm run build-demo && gh-pages -d build",
-    "publish-npm": "npm run build && npm publish"
+    "publish-npm": "npm run build && npm publish",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "preferGlobal": true,
   "bin": {
     "rasa-nlu-trainer": "./server.js"
   },
-  "homepage": "https://golastmile.github.io/rasa-nlu-trainer/",
+  "homepage": "https://jevgenijazigisova.github.io/rasa-nlu-trainer/",
   "license": "MIT",
   "jest": {
     "collectCoverageFrom": [
