--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
     "build": "node scripts/build.js && replace '\"/rasa-nlu-trainer/' '\"/' ./build/index.html",
     "test": "node scripts/test.js --env=jsdom",
     "publish-demo": "npm run build-demo && gh-pages -d build",
-    "publish-npm": "npm run build && npm publish",
-    "deploy": "npm run build&&gh-pages -d build"
+    "publish-npm": "npm run build && npm publish"
   },
   "preferGlobal": true,
   "bin": {
